Adding Generic types to serializer